--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Document</title>
   <script src="https://kit.fontawesome.com/49532cbdbb.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@500&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,14 +24,14 @@
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#eduction">Education</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <div id="heading">
       <div id="name" class="text_center">
-        <h1>Saloni kumari</h1>
+        <h1>SALONI KUMARI</h1>
       </div>
       <div class="text_center">
         <ul class="social_media">
@@ -53,7 +59,8 @@
       <div id="myimage">
         <img src="myimage.jpg" />
 
-      </div <div id="paragraph">
+      </div> 
+      <div id="paragraph">
       <p>
         My self Saloni Kumari a second year student of Computer Science in Haldia Institute Of Technology.I am from
         Giridih district of Jharkhand.I have completed my AISSE from Jawahar Navodaya
@@ -69,9 +76,10 @@
         </span>
         <span> SKILLS </span>
       </h1>
-      <div class="skills-display">
+      <div id="skillsdisplay">
+        
         <div class="skills-progress">
-          <div class=" eighty-five-percent mb-blue">
+          <div class=" eighty-five-percent mb-blue skill" data-value="85">
             <div class="skill-name">
               <span> C++ </span>
             </div>
@@ -80,7 +88,7 @@
 
 
         <div class="skills-progress">
-          <div class="eighty-five-percent grey">
+          <div class="eighty-five-percent grey skill" data-value="85">
             <div class="skill-name">
               <span> Python </span>
             </div>
@@ -89,7 +97,7 @@
 
 
         <div class="skills-progress">
-          <div class="eighty-percent orange">
+          <div class="eighty-percent orange skill" data-value="80" >
             <div class="skill-name">
               <span> Html </span>
             </div>
@@ -98,7 +106,7 @@
 
 
         <div class="skills-progress">
-          <div class="eighty-percent red">
+          <div class="eighty-percent red skill" data-value="80">
             <div class="skill-name">
               <span> C </span>
             </div>
@@ -107,7 +115,7 @@
 
 
         <div class="skills-progress">
-          <div class="eighty-five-percent grey">
+          <div class="eighty-five-percent grey skill" data-value="85">
             <div class="skill-name">
               <span> CSS </span>
             </div>
@@ -231,6 +239,8 @@
     </section>
 
   </main>
+  <script src ="script.js"></script>
+  <script src ="script2.js"></script>
 </body>
 
 </html>
